# self-audit

./: README.md  pyproject.toml
self_audit/: __init__.py  cli.py
