[project]
name = "self-audit"
version = "1.0.0"
description = "Four-dimension AI output quality audit — Completeness, Consistency, Groundedness, Honesty. Implements Constitutional AI principles."
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = []
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Quality Assurance",
]

[project.scripts]
self-audit = "self_audit.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_LegacyBuildBackend"
